<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".view.common.login.LoginScreen">

    <ScrollView
        android:id="@+id/sc_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:focusableInTouchMode="true"
            android:paddingBottom="@dimen/_30sdp">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_100sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logo__1_"
                android:transitionName="logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline" />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:background="@drawable/edit_text"
                app:layout_constraintTop_toBottomOf="@id/iv_logo">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/phone"
                    android:padding="@dimen/_10sdp"
                    android:textAlignment="viewStart"
                    android:textColor="#748A9D"
                    android:textColorHint="#748A9D"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="italic"
                    android:inputType="phone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/seperator"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:id="@+id/seperator"
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:background="#748A9D"
                    app:layout_constraintBottom_toBottomOf="@id/user_iv"
                    app:layout_constraintStart_toEndOf="@id/user_iv"
                    app:layout_constraintTop_toTopOf="@id/user_iv" />

                <ImageView
                    android:id="@+id/user_iv"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:src="@drawable/ic_user"
                    app:layout_constraintBottom_toBottomOf="@id/et_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_username" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:background="@drawable/edit_text"
                app:layout_constraintTop_toBottomOf="@id/cl_username">

                <ImageView
                    android:id="@+id/show_hide"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="8dp"
                    android:onClick="showHidePassword"
                    android:src="@drawable/ic_baseline_visibility_off_24"
                    app:layout_constraintBottom_toBottomOf="@id/et_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/et_password"
                    app:layout_constraintTop_toTopOf="@id/et_password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textAlignment="viewStart"
                    android:textColor="#748A9D"
                    android:textColorHint="#748A9D"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/show_hide"
                    app:layout_constraintStart_toEndOf="@id/seperator22"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:id="@+id/seperator22"
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:background="#748A9D"
                    app:layout_constraintBottom_toBottomOf="@id/user_iv22"
                    app:layout_constraintStart_toEndOf="@id/user_iv22"
                    app:layout_constraintTop_toTopOf="@id/user_iv22" />

                <ImageView
                    android:id="@+id/user_iv22"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:src="@drawable/ic_lock"
                    app:layout_constraintBottom_toBottomOf="@id/et_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_password" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/login_btn_bg"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/cl_password"
                app:layout_constraintStart_toStartOf="@id/cl_password"
                app:layout_constraintTop_toBottomOf="@id/cl_password" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/sign_up_btn_bg"
                android:onClick="signUp"
                android:text="@string/register"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/sign_up_btn_bg"
                android:onClick="skip"
                android:text="@string/skip"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@id/btn_signup" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_skip"
                android:layout_margin="@dimen/_10sdp"
                app:cardElevation="@dimen/_4sdp">

                <com.google.android.ads.nativetemplates.TemplateView
                    android:id= "@+id/nativeTemplateView"
                    app:gnt_template_type= "@layout/gnt_medium_template_view"
                    android:layout_width= "match_parent"
                    android:layout_height= "wrap_content" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
